--- a/customization(background).html
+++ b/customization(background).html
@@ -42,7 +42,7 @@
             </div>
             <div class="card-img">
                 <div>
-                    <img src="img/classic_Cloth.png" alt="">
+                    <img src="img/classic-cloth.png" alt="">
                 </div>
                 <div>
                     <img src="img/medieval.png" alt="">
