--- a/customization(background).html
+++ b/customization(background).html
@@ -41,32 +41,41 @@
                 <button><a href="#">Card Back</a></button>
             </div>
             <div class="card-img">
-                <div>
-                    <img src="img/classic-cloth.png" alt="">
+                <div class="card-box">
+                    <img src="img/Classic-Cloth.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
+                <div class="card-box">
                     <img src="img/medieval.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/paradise.png" alt="">
+                <div class="card-box">
+                    <img src="img/Paradise.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/pirates.png" alt="">
+                <div class="card-box">
+                    <img src="img/Pirates.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/beach.png" alt="">
+                <div class="card-box">
+                    <img src="img/Beach.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/bloom.png" alt="">
+                <div class="card-box">
+                    <img src="img/Bloom.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/medieval.png" alt="">
+                <div class="card-box">
+                    <img src="img/Forest.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/paradise.png" alt="">
+                <div class="card-box">
+                    <img src="img/Meadow.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div>
-                    <img src="img/pirates.png" alt="">
+                <div class="card-box">
+                    <img src="img/Aquarium.png" alt="">
+                    <p class="card-name">Classic Cloth</p>
                 </div>
             </div>
         </div>
