--- a/customization(background).html
+++ b/customization(background).html
@@ -42,39 +42,39 @@
             </div>
             <div class="card-img">
                 <div class="card-box">
-                    <img src="img/Classic-Cloth.png" alt="">
+                    <img src="./img/classic-cloth.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/medieval.png" alt="">
+                    <img src="./img/medieval.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Paradise.png" alt="">
+                    <img src="./img/Paradise.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Pirates.png" alt="">
+                    <img src="./img/Pirates.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Beach.png" alt="">
+                    <img src="./img/Beach.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Bloom.png" alt="">
+                    <img src="./img/Bloom.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Forest.png" alt="">
+                    <img src="./img/Forest.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Meadow.png" alt="">
+                    <img src="./img/Meadow.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="img/Aquarium.png" alt="">
+                    <img src="./img/Aquarium.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
             </div>
