--- a/customization(background).html
+++ b/customization(background).html
@@ -50,31 +50,31 @@
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Paradise.png" alt="">
+                    <img src="./img/paradise.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Pirates.png" alt="">
+                    <img src="./img/pirates.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Beach.png" alt="">
+                    <img src="./img/beach.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Bloom.png" alt="">
+                    <img src="./img/bloom.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Forest.png" alt="">
+                    <img src="./img/forest.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Meadow.png" alt="">
+                    <img src="./img/meadow.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/Aquarium.png" alt="">
+                    <img src="./img/aquarium.png" alt="">
                     <p class="card-name">Classic Cloth</p>
                 </div>
             </div>
