--- a/customization(background).html
+++ b/customization(background).html
@@ -42,39 +42,39 @@
             </div>
             <div class="card-img">
                 <div class="card-box">
-                    <img src="./img/classic-cloth.png" alt="">
+                    <img src="./img/classic-cloth.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/medieval.png" alt="">
+                    <img src="./img/medieval.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/paradise.png" alt="">
+                    <img src="./img/paradise.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/pirates.png" alt="">
+                    <img src="./img/pirates.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/beach.png" alt="">
+                    <img src="./img/beach.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/bloom.png" alt="">
+                    <img src="./img/bloom.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/forest.png" alt="">
+                    <img src="./img/forest.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/meadow.png" alt="">
+                    <img src="./img/meadow.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/aquarium.png" alt="">
+                    <img src="./img/aquarium.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
             </div>
