--- a/customization(background).html
+++ b/customization(background).html
@@ -50,7 +50,7 @@
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
-                    <img src="./img/paradise.png" alt="change">
+                    <img src="./img/paradise_king.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
