--- a/customization(background).html
+++ b/customization(background).html
@@ -77,6 +77,30 @@
                     <img src="./img/aquarium.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
                 </div>
+                <div class="card-box">
+                    <img src="./img/forest.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/meadow.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/aquarium.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/forest.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/meadow.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/aquarium.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
             </div>
         </div>
     </div>
