--- a/customization(background).html
+++ b/customization(background).html
@@ -31,14 +31,16 @@
 <body class="intro-bg">
     <div class="center_box">
         <div class="box-bg">
-            <div class="text-button">
-                <p>Customization</p>
-                <button class="don-btn"><a href="#">Done</a></button>
-            </div>
-            <div class="btn-three">
-                <button><a href="#">Background</a></button>
-                <button><a href="#">Card Face</a></button>
-                <button><a href="#">Card Back</a></button>
+            <div class="box-sticky">
+                <div class="text-button">
+                    <p>Customization</p>
+                    <button class="don-btn"><a href="#">Done</a></button>
+                </div>
+                <div class="btn-three">
+                    <button><a href="#">Background</a></button>
+                    <button><a href="#">Card Face</a></button>
+                    <button><a href="#">Card Back</a></button>
+                </div>
             </div>
             <div class="card-img">
                 <div class="card-box">
