--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <div class="welcome_pop-up">
+    <div class="welcome_pop_up">
         <div class="mt">
             <p class="welcome_text">Welcome to Spider Solitaire!</p>
         </div>
@@ -49,6 +49,7 @@
             <p>Skip</p>
         </a>
     </div>
+
 </body>
 
 </html>
