--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
         <a class="skip" href="Skip">
             <p>Skip</p>
         </a>
+        <button id="showPopup">Show Popup</button>
+        <div id="popup" class="popup">
+            <button id="hidePopup">Hide Popup</button>
+            <p>This is a popup!</p>
+        </div>
     </div>
+
+      
+
+    <script src="./solitaire.js"></script>
+</body>
 
 </body>
 
