--- a/customizationbg.html
+++ b/customizationbg.html
@@ -15,22 +15,9 @@
 
     <style>
         .popup {
-            display: none;
-            /* Initially hide the popup */
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border: 1px solid #ccc;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+             display: none;
         }
-    </style>
-
-</head>
-<style>
-    body::before {
+        body::before {
         content: "";
         width: 100%;
         height: 100%;
@@ -40,16 +27,19 @@
         left: 0;
         opacity: 0.6;
     }
-</style>
+    </style>
+
+</head>
 
 <body class="intro-bg">
-    <button id="showPopup">Show Popup</button>
-    <div id="popup" class="center_box popup">
-        <div class="box-bg">
+    
+    <div class="center_box">
+        <button id="showPopup">Show Popup</button>
+        <div class="box-bg popup" id="popup">
             <div class="box-sticky">
-                <div class="text-button">
+                <div class="text-button popup">
                     <p>Customization</p>
-                    <button class="don-btn" id="hidePopup"><a href="#">Done</a></button>
+                    <button class="don-btn" id="hidePopup" ><a href="#">Done</a></button>
                 </div>
                 <div class="btn-three">
                     <button><a href="#">Background</a></button>
@@ -122,8 +112,8 @@
         </div>
     </div>
 
-<!-- 
-    <button id="showPopup">Show Popup</button>
+
+    <!-- <button id="showPopup">Show Popup</button>
     <div id="popup" class="popup">
         <button id="hidePopup">Hide Popup</button>
         <p>This is a popup!</p>
