--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <!-- Start: main head -->
 
@@ -15,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/home.css">
+    <!-- <link rel="stylesheet" href="./css/home.css"> -->
     <!-- End: Link -->
     <style>
         * {
@@ -250,7 +251,7 @@
                     </div>
                     <p id="text-same">Settings</p>
                 </div>
-                <div id="box-main">
+                <div id="box-main" id="showPopup">
                     <div class="icons-img">
                         <img src="./img/themes.svg" alt="img">
                     </div>
@@ -339,9 +340,8 @@
 
     </div>
     <!--? End: main  -->
-
     <!-- Start: Js links-->
-    <script src="./js/solitaire.js"></script>
+    <!-- <script src="./js/solitaire.js"></script> -->
     <!-- End: Js links-->
 </body>
 
