add popup functionalities
functionalities

--- a/game-main.html
+++ b/game-main.html
@@ -243,9 +243,8 @@
         <!--? End: Section_Two  -->
     </div>
     <!--? End: main  -->
-    <!-- popup  -->
+    <!-- popup Background -->
     <div class="center_box popup" id="popup">
-        <!-- <button id="showPopup">Show Popup</button> -->
         <div class="box-bg " >
             <div class="box-sticky">
                 <div class="text-button">
@@ -253,12 +252,12 @@
                     <button class="don-btn" id="hidePopup"><a href="#">Done</a></button>
                 </div>
                 <div class="btn-three">
-                    <button><a href="#">Background</a></button>
-                    <button><a href="#">Card Face</a></button>
-                    <button><a href="#">Card Back</a></button>
+                    <button id="background"><a href="#">Background</a></button>
+                    <button id="card_face"><a href="#">Card Face</a></button>
+                    <button id="card_back"><a href="#">Card Back</a></button>
                 </div>
             </div>
-            <div class="card-img">
+            <div class="card-img " id="bgcard">
                 <div class="card-box">
                     <img src="./img/classic-cloth.png" alt="change">
                     <p class="card-name">Classic Cloth</p>
@@ -322,6 +321,112 @@
             </div>
         </div>
     </div>
+
+    <!-- popup Card Face -->
+    <div class="center_box popup" id="popup">
+        <div class="box-bg " >
+            <div class="box-sticky">
+                <!-- <div class="text-button">
+                    <p>Customization</p>
+                    <button class="don-btn" id="hidePopup"><a href="#">Done</a></button>
+                </div> -->
+                <!-- <div class="btn-three">
+                    <button id="background"><a href="#">Background</a></button>
+                    <button id="card_face"><a href="#">Card Face</a></button>
+                    <button id="card_back"><a href="#">Card Back</a></button>
+                </div> -->
+            </div>
+            <div class="card-img " id="cardface">
+                <div class="card-box">
+                    <img src="./img/pirates.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/beach.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/bloom.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/classic-cloth.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+                <div class="card-box">
+                    <img src="./img/medieval.png" alt="change">
+                    <p class="card-name">Classic Cloth</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Card Back -->
+    <div class="card-img">
+        <div class="card-box">
+            <img src="./img/classic-cloth.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/medieval.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/paradise_king.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/pirates.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/beach.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/bloom.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/forest.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/meadow.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/aquarium.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/forest.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/meadow.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/aquarium.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/forest.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/meadow.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+        <div class="card-box">
+            <img src="./img/aquarium.png" alt="change">
+            <p class="card-name">Classic Cloth</p>
+        </div>
+    </div>
+
+
+
     <script src="./solitaire.js"></script>
 </body>
 
