--- a/game-main.html
+++ b/game-main.html
@@ -38,7 +38,7 @@
         }
 
         img {
-            width: 100%;
+            /* width: 100%; */
             height: 100%;
         }
 
@@ -321,25 +321,25 @@
             </div>
                 <!-- popup Card Face -->
             <div class="card-img cardface_box " id="cardface">
-                <div class="card-box">
+                <div class="card-box card_face">
                     <img src="./img/pirates.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
                 </div>
-                <div class="card-box">
+                <div class="card-box card_face">
+                    <!-- <img src="img/Component 58.png" alt=""> -->
+                    <!-- <img src="img/Component 60.png" alt=""> -->
                     <img src="./img/beach.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
                 </div>
-                <div class="card-box">
+                <div class="card-box card_face">
+                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
                     <img src="./img/bloom.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
+                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
                     <img src="./img/classic-cloth.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
                 </div>
                 <div class="card-box">
                     <img src="./img/medieval.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
                 </div>
             </div>
                 <!-- Card Back -->
