--- a/game-main.html
+++ b/game-main.html
@@ -322,55 +322,67 @@
                 <!-- popup Card Face -->
             <div class="card-img cardface_box " id="cardface">
                 <div class="card-box card_face">
-                    <img src="./img/pirates.png" alt="change">
-                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
                 <div class="card-box card_face">
-                    <!-- <img src="img/Component 58.png" alt=""> -->
-                    <!-- <img src="img/Component 60.png" alt=""> -->
-                    <img src="./img/beach.png" alt="change">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
                 <div class="card-box card_face">
-                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
-                    <img src="./img/bloom.png" alt="change">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
-                <div class="card-box">
-                    <!-- <img src="img/CardFace k9_red.png" alt=""> -->
-                    <img src="./img/classic-cloth.png" alt="change">
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>                    
                 </div>
-                <div class="card-box">
-                    <img src="./img/medieval.png" alt="change">
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>                    
+                </div>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
             </div>
                 <!-- Card Back -->
             <div class="card-img cardback " id="cardback">
-                <div class="card-box">
-                    <img src="./img/pirates.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
-                <div class="card-box">
-                    <img src="./img/beach.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
-                <div class="card-box">
-                    <img src="./img/bloom.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
-                <div class="card-box">
-                    <img src="./img/classic-cloth.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>                    
                 </div>
-                <div class="card-box">
-                    <img src="./img/bloom.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>                    
                 </div>
-                <div class="card-box">
-                    <img src="./img/classic-cloth.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
-                </div>
-                <div class="card-box">
-                    <img src="./img/medieval.png" alt="change">
-                    <p class="card-name">Classic Cloth</p>
+                <div class="card-box card_face">
+                    <div class="image_face_box">
+                        <img src="img/card_k9.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
