--- a/game-main.html
+++ b/game-main.html
@@ -328,60 +328,60 @@
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/k9_bleck.png" alt="">
                     </div>
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/k9_blue.png" alt="">
                     </div>
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/k9_bleck.bg.png" alt="">
                     </div>                    
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/k9_red.bleck.png" alt="">
                     </div>                    
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/k9_red.png" alt="">
                     </div>
-                </div>
+                </div>              
             </div>
                 <!-- Card Back -->
             <div class="card-img cardback " id="cardback">
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/classic-cloth_bg.png" alt="">
                     </div>
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/medieval_bg.png" alt="">
                     </div>
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/paradise_king_bg.png" alt="">
                     </div>
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/forest_bg.png" alt="">
                     </div>                    
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/meadow_bg.png" alt="">
                     </div>                    
                 </div>
                 <div class="card-box card_face">
                     <div class="image_face_box">
-                        <img src="img/card_k9.png" alt="">
+                        <img src="img/pirates_bg.png" alt="">
                     </div>
                 </div>
             </div>
