--- a/index.html
+++ b/index.html
@@ -55,7 +55,90 @@
         </div>
     </div>
 
-      
+    <!-- <div class="center_box " id="">
+        <div class="box-bg " >
+            <div class="box-sticky">
+                <div class="text-button">
+                    <p>Awards</p>
+                    <button class="don-btn" id="hidePopup"><a href="#">Done</a></button>
+                </div>
+                <div class="btn-three bcc_button">
+                    <button  id="daily"><a href="#">Daily</a></button>
+                    <button  id="events"><a href="#">Events</a></button>
+                </div>
+            </div>
+            <div class="month_year_ehod">
+                <div class="year">
+                    <p>2024</p>
+                </div>
+                <div class="month_awards_box">
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/february_awards.png" alt="">
+                            <p>February</p>
+                            <div class="line"></div>
+                            <p class="day">1 of 29</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img src="img/january_awards.png" alt="">
+                            <p>January</p>
+                            <div class="line"></div>
+                            <p class="day">31 of 31</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="year">
+                    <p>2023</p>
+                </div>
+                <div class="month_awards_box">
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/december_awards.png" alt="">
+                            <p>December</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/november_awards.png" alt="">
+                            <p>November</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/october_awards.png" alt="">
+                            <p>October</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/september_awards.png" alt="">
+                            <p>September</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/august_awards.png" alt="">
+                            <p>August</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+
 
     <script src="./solitaire.js"></script>
 </body>
@@ -63,3 +146,4 @@
 </body>
 
 </html>
+
