--- a/game-main.html
+++ b/game-main.html
@@ -195,7 +195,7 @@
 
             <!--? Start: setting & themes  -->
             <div id="combo-right">
-                <div id="box-main">
+                <div id="box-main" class="setting">
                     <div class="icons-img">
                         <img src="./img/GearSix.svg" alt="img">
                     </div>
@@ -257,6 +257,7 @@
                     <button  id="card_back"><a href="#">Card Back</a></button>
                 </div>
             </div>
+            <!-- Background  -->
             <div class="card-img " id="bgcard">
                 <div class="card-box">
                     <img src="./img/classic-cloth.png" alt="change">
@@ -387,6 +388,90 @@
             </div>
         </div>
     </div>
+    <!-- Settings popup -->
+    <div class="center_box  setting_popup" id="setting_popup">
+        <div class="box-bg " >
+            <div class="box-sticky">
+                <div class="text-button">
+                    <p>Awards</p>
+                    <button class="don-btn" id="setting_hidePopup"><a href="#">Done</a></button>
+                </div>
+                <div class="btn-three bcc_button">
+                    <button  id="daily"><a href="#">Daily</a></button>
+                    <button  id="events"><a href="#">Events</a></button>
+                </div>
+            </div>
+            <div class="month_year_ehod">
+                <div class="year">
+                    <p>2024</p>
+                </div>
+                <div class="month_awards_box">
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/february_awards.png" alt="">
+                            <p>February</p>
+                            <div class="line"></div>
+                            <p class="day">1 of 29</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img src="img/january_awards.png" alt="">
+                            <p>January</p>
+                            <div class="line"></div>
+                            <p class="day">31 of 31</p>
+                        </div>
+                    </div>                
+                </div>
+                <div class="year">
+                    <p>2023</p>
+                </div>
+                <div class="month_awards_box">
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/december_awards.png" alt="">
+                            <p>December</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/november_awards.png" alt="">
+                            <p>November</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/october_awards.png" alt="">
+                            <p>October</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/september_awards.png" alt="">
+                            <p>September</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/august_awards.png" alt="">
+                            <p>August</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="./solitaire.js"></script>
 </body>
