--- a/game-main.html
+++ b/game-main.html
@@ -401,7 +401,8 @@
                     <button  id="events"><a href="#">Events</a></button>
                 </div>
             </div>
-            <div class="month_year_ehod">
+            <!-- Daily -->
+            <div class="month_year_ehod" id="days">
                 <div class="year">
                     <p>2024</p>
                 </div>
@@ -421,7 +422,7 @@
                             <div class="line"></div>
                             <p class="day">31 of 31</p>
                         </div>
-                    </div>                
+                    </div>      
                 </div>
                 <div class="year">
                     <p>2023</p>
@@ -467,6 +468,62 @@
                             <p class="day">0 of 31</p>
                         </div>
                     </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/september_awards.png" alt="">
+                            <p>September</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/august_awards.png" alt="">
+                            <p>August</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/september_awards.png" alt="">
+                            <p>September</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/august_awards.png" alt="">
+                            <p>August</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/september_awards.png" alt="">
+                            <p>September</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 30</p>
+                        </div>
+                    </div>
+                    <div class="card-box awards_box">
+                        <div class="award_box">
+                            <img class="monthli_level" src="img/august_awards.png" alt="">
+                            <p>August</p>
+                            <div class="line"></div>
+                            <p class="day">0 of 31</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Events -->
+             <div class="month_year_ehod" id="event">
+                <div class="event_box">
+                    <img src="img/events_image.png" alt="">
+                    <p class="text_1">You have no awards yet</p>
+                    <p class="text_2">Take part in event and collect unique rewards. Stay tuned!</p>
                 </div>
             </div>
         </div>
