--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <div class="welcome_pop_up">
+    <!-- <div class="welcome_pop_up">
         <div class="mt">
             <p class="welcome_text">Welcome to Spider Solitaire!</p>
         </div>
@@ -53,9 +53,9 @@
             <button id="hidePopup">Hide Popup</button>
             <p>This is a popup!</p>
         </div>
-    </div>
+    </div> -->
 
-    <!-- <div class="center_box " id="">
+    <div class="center_box " id="">
         <div class="box-bg " >
             <div class="box-sticky">
                 <div class="text-button">
@@ -68,75 +68,14 @@
                 </div>
             </div>
             <div class="month_year_ehod">
-                <div class="year">
-                    <p>2024</p>
-                </div>
-                <div class="month_awards_box">
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/february_awards.png" alt="">
-                            <p>February</p>
-                            <div class="line"></div>
-                            <p class="day">1 of 29</p>
-                        </div>
-                    </div>
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img src="img/january_awards.png" alt="">
-                            <p>January</p>
-                            <div class="line"></div>
-                            <p class="day">31 of 31</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="year">
-                    <p>2023</p>
-                </div>
-                <div class="month_awards_box">
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/december_awards.png" alt="">
-                            <p>December</p>
-                            <div class="line"></div>
-                            <p class="day">0 of 31</p>
-                        </div>
-                    </div>
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/november_awards.png" alt="">
-                            <p>November</p>
-                            <div class="line"></div>
-                            <p class="day">0 of 30</p>
-                        </div>
-                    </div>
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/october_awards.png" alt="">
-                            <p>October</p>
-                            <div class="line"></div>
-                            <p class="day">0 of 31</p>
-                        </div>
-                    </div>
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/september_awards.png" alt="">
-                            <p>September</p>
-                            <div class="line"></div>
-                            <p class="day">0 of 30</p>
-                        </div>
-                    </div>
-                    <div class="card-box awards_box">
-                        <div class="award_box">
-                            <img class="monthli_level" src="img/august_awards.png" alt="">
-                            <p>August</p>
-                            <div class="line"></div>
-                            <p class="day">0 of 31</p>
-                        </div>
-                    </div>
+                <div class="event_box">
+                    <img src="img/events_image.png" alt="">
+                    <p class="text_1">You have no awards yet</p>
+                    <p class="text_2">Take part in event and collect unique rewards. Stay tuned!</p>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
 
