--- a/tutorial-completed.html
+++ b/tutorial-completed.html
@@ -19,6 +19,7 @@
     body {
         position: relative;
     }
+
     body::before {
         content: "";
         display: block;
@@ -29,22 +30,24 @@
         top: 0;
         left: 0;
         opacity: 0.8;
+
     }
 </style>
 
 <body>
-  <div>
-    <div class="text-box">
-      <p>Reveal hidden cards by moving one card onto another that’s one rank higher</p>
-    </div>
-    <div class="king_img-bot">
-      <img src="img/king_img.png" alt="">
-    </div>
-  </div>
 
+    <div class="tutorial_pop_up" id="start_welcome">
+        <div class="mt">
+            <p class="welcome_text">Tutorial Completed!</p>
+        </div>
+        <img class="img_king" src="img/welcome-king.png" alt="img">
+        <div class="lets_mt">
+            <p class="lets_text">Congratulations, you completed the tutorial! Now let’s start a new random game!</p>
+        </div>
+        <button class="start_btn">Continue</button>
+    </div>
     <script src="./solitaire.js"></script>
 </body>
-
 </body>
 
 </html>
