--- a/all-timenewbestscore.html
+++ b/all-timenewbestscore.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <div class="all_time_new_score">
         <div class="new_score_box">
             <p>All-Time New Best Score</p>
@@ -74,6 +73,8 @@
                 </div>
             </div>
         </div>
+        <button class="new_game">New Game</button>
+        <a class="main" href="#">Main</a>
     </div>
 
     <script src="./solitaire.js"></script>
